--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/FtpCredentialsExposure.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/FtpCredentialsExposure.yaml
@@ -1,14 +1,14 @@
-id: CONFIGURATION_LISTING
+id: FTP_CREDENTIALS_EXPOSURE
 info:
-  name: config_list
-  description: yt
-  details: dyt
-  impact: dyt
+  name: FTP credentials exposure
+  description: UIDGUI GUIHDUG DHIVUD 
+  details: ydt
+  impact: tyjdf
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
-  subCategory: CONFIGURATION_LISTING
+  subCategory: FTP_CREDENTIALS_EXPOSURE
   severity: MEDIUM
 
 api_selection_filters:
@@ -17,17 +17,18 @@ api_selection_filters:
     lt: 300
   url:
     extract: urlVar
-  
+
 execute:
   type: single
   requests:
     - req:
-      - modify_url: ${urlVar}/config/
-
+      - modify_url: ${urlVar}/ftpsync.settings
+      
 validate:
   response_code:
     eq: 200
   response_payload:
     contains_all:
-      - "Index of /configs"
-      - "Parent Directory"
+      - FTPSync
+      - overwrite_newer_prevention
+      - default_folder_permissions
