--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GitCredentialsDisclosure.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GitCredentialsDisclosure.yaml
@@ -1,14 +1,14 @@
-id: DOCKERFILE_HIDDEN_DISCLOSURE
+id: GIT_CREDENTIALS_DISCLOSURE
 info:
-  name: hidden_docker
-  description: hf
+  name: Git Credentials Disclosure
+  description: Searches for the pattern and log file on passed URLs.
   details: ydt
   impact: tyjdf
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
-  subCategory: DOCKERFILE_HIDDEN_DISCLOSURE
+  subCategory: GIT_CREDENTIALS_DISCLOSURE
   severity: MEDIUM
 
 api_selection_filters:
@@ -18,23 +18,20 @@ api_selection_filters:
   url:
     extract: urlVar
 
-wordLists:
-  urlPaths:
-    - ${urlVar}/.dockerfile
-    - ${urlVar}/.Dockerfile
-  
 execute:
   type: single
   requests:
     - req:
-      - modify_url: ${urlPaths}
+      - modify_url: ${urlVar}/.git-credentials
       
 validate:
   response_code:
     eq: 200
   response_payload:
-    regex: '^(?:FROM(?:CACHE)?|RUN|ADD|WORKDIR|ENV|EXPOSE|\#)\s+[ -~]+'
+    contains_all:
+      - "https://"
+      - "@github.com"
   response_headers:
     for_one:
       value:
-        not_contains: text/html
+        not_contains: 'text/html'
