--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ApacheConfig.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ApacheConfig.yaml
@@ -1,9 +1,9 @@
 id: APACHE_CONFIG
 info:
   name: Apache Config file disclosure
-  description:
-  details:
-  impact:
+  description: cdyht
+  details: cdyhyt
+  impact: xstrh
   category:
     name: SM
     shortName: Misconfiguration
@@ -11,7 +11,7 @@ info:
   subCategory: AIRFLOW_CONFIGURATION_EXPOSURE
   severity: LOW
 
-api_selections_filter:
+api_selection_filters:
   response_code:
     gte: 200
     lt: 300
