--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/DebugVars.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/DebugVars.yaml
@@ -1,9 +1,9 @@
 id: DEBUG_VARS
 info:
-  name: 
-  description:
-  details:
-  impact:
+  name: debug
+  description: rtds
+  details: ytdc
+  impact: tyfc
   category:
     name: SM
     shortName: Misconfiguration
@@ -11,7 +11,7 @@ info:
   subCategory: DEBUG_VARS
   severity: LOW
 
-api_selections_filter:
+api_selection_filters:
   response_code:
     gte: 200
     lt: 300
