--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/OracleEbsCredentials.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/OracleEbsCredentials.yaml
@@ -1,14 +1,14 @@
-id: CONFIGURATION_LISTING
+id: ORACLE_EBS_CREDENTIALS
 info:
-  name: config_list
-  description: yt
-  details: dyt
-  impact: dyt
+  name: Oracle EBS Credentials Disclosure
+  description: hhkij
+  details: jhfj
+  impact: fjhfy
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
-  subCategory: CONFIGURATION_LISTING
+  subCategory: ORACLE_EBS_CREDENTIALS
   severity: MEDIUM
 
 api_selection_filters:
@@ -22,12 +22,17 @@ execute:
   type: single
   requests:
     - req:
-      - modify_url: ${urlVar}/config/
+      - modify_url: ${urlVar}/OA_HTML/jtfwrepo.xml
 
 validate:
   response_code:
     eq: 200
   response_payload:
     contains_all:
-      - "Index of /configs"
-      - "Parent Directory"
+      - "password="
+      - "<PUSR_LIST>"
+    response_headers:
+    for_one:
+      value:
+        contains_all:
+          - "text/xml"
