--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SonarqubePublicProjects.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SonarqubePublicProjects.yaml
@@ -1,15 +1,15 @@
-id: CONFIGURATION_LISTING
+id: SONARQUBE_PUBLIC_PROJECTS
 info:
-  name: config_list
-  description: yt
-  details: dyt
-  impact: dyt
+  name: Sonarqube with public projects
+  description: hhkij
+  details: jhfj
+  impact: fjhfy
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
-  subCategory: CONFIGURATION_LISTING
-  severity: MEDIUM
+  subCategory: SONARQUBE_PUBLIC_PROJECTS
+  severity: LOW
 
 api_selection_filters:
   response_code:
@@ -22,12 +22,13 @@ execute:
   type: single
   requests:
     - req:
-      - modify_url: ${urlVar}/config/
+      - modify_url: ${urlVar}/api/components/suggestions?recentlyBrowsed=
 
 validate:
   response_code:
     eq: 200
   response_payload:
     contains_all:
-      - "Index of /configs"
-      - "Parent Directory"
+      - '"results":'
+      - '"items":'
+      - '"more":'
