--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SshKnownHosts.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SshKnownHosts.yaml
@@ -1,15 +1,15 @@
-id: APPSPEC_YML_DISCLOSURE
+id: SSH_KNOWN_HOSTS
 info:
-  name: apsec
-  description: hftdt
-  details: erfsa
-  impact: khni
+  name: SSH Known Hosts
+  description: hhkij
+  details: jhfj
+  impact: fjhfy
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
-  subCategory: APPSPEC_YML_DISCLOSURE
-  severity: MEDIUM
+  subCategory: SSH_KNOWN_HOSTS
+  severity: LOW
 
 api_selection_filters:
   response_code:
@@ -19,22 +19,22 @@ api_selection_filters:
     extract: urlVar
 
 wordLists:
-  urlPaths: 
-    - ${urlVar}/appspec.yml
-    - ${urlVar}/appspec.yaml
-
+  urlPaths:
+    - ${urlVar}/.ssh/known_hosts
+    - ${urlVar}/.ssh/known_hosts.old
+  
 execute:
   type: single
   requests:
     - req:
       - modify_url: ${urlPaths}
-    
 
 validate:
   response_code:
     eq: 200
   response_payload:
-    contains_all:
-      - "version:"
-      - "os:"
-      - "files:"
+    contains_either:
+      - "ssh-dss"
+      - "ssh-ed25519"
+      - "ssh-rsa"
+      - "ecdsa-sha2-nistp256"
