--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "file-saver": "^2.0.5",
+    "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
