added desc,details,imppact and ref

--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/AppspecYmlDisclosure.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/AppspecYmlDisclosure.yaml
@@ -1,15 +1,18 @@
 id: APPSPEC_YML_DISCLOSURE
 info:
-  name: apsec
-  description: hftdt
-  details: erfsa
-  impact: khni
+  name: Appspec Yml Disclosure
+  description: "Attackers can get access to the appspec.yml file used in application deployments."
+  details: >
+              "Appspec Yml Disclosure refers to the vulnerability where the appspec.yml file, crucial for application deployments, is exposed due to misconfiguration. Unauthorized access to this file reveals sensitive deployment information, including version details, operating system specifications, and file information. Attackers can exploit this exposure to gain insights into the deployment process, identify potential vulnerabilities, and execute unauthorized modifications or disruptions to the application. Promptly addressing this issue is essential to prevent unauthorized access and protect the application's integrity and availability."
+  impact: "Unauthorized access reveals deployment details, enabling potential exploitation, unauthorized modifications, and disruptions to the application."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: APPSPEC_YML_DISCLOSURE
   severity: MEDIUM
+  references:
+    - https://github.com/detectify/ugly-duckling/blob/master/modules/crowdsourced/appsec-yml-disclosure.json
 
 api_selection_filters:
   response_code:
