--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SshAuthorizedKeys.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SshAuthorizedKeys.yaml
@@ -1,15 +1,18 @@
 id: SSH_AUTHORIZED_KEYS
 info:
   name: SSH Authorized Keys
-  description: hhkij
-  details: jhfj
-  impact: fjhfy
+  description: "Exposed SSH Authorized Keys"
+  details: >
+              "searches for publicly accessible SSH authorized_keys files, which contain SSH public keys used for authentication. Unauthorized access to these keys can lead to unauthorized SSH access to the system."
+  impact: "Exposing SSH authorized keys increases the risk of unauthorized SSH access, potentially leading to unauthorized system access and compromised security."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: SSH_AUTHORIZED_KEYS
   severity: LOW
+  references:
+    - https://www.ssh.com/academy/ssh/authorized-key
 
 api_selection_filters:
   response_code:
