--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ConfigurationListing.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ConfigurationListing.yaml
@@ -1,15 +1,18 @@
 id: CONFIGURATION_LISTING
 info:
-  name: config_list
-  description: yt
-  details: dyt
-  impact: dyt
+  name: Sensitive Configuration Files Listing
+  description: "Directory listing of sensitive files."
+  details: >
+              "Sensitive Configuration Files Listing refers to the vulnerability where the misconfiguration allows the listing of sensitive configuration files located in the "config" directory. This exposure can disclose critical information like database credentials and API keys, posing a significant risk to the application's security. Promptly addressing this vulnerability is essential to prevent unauthorized access and protect sensitive data from exploitation."
+  impact: "Listing sensitive configuration files exposes critical information, such as database credentials and API keys, enabling targeted attacks and unauthorized access."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: CONFIGURATION_LISTING
   severity: MEDIUM
+  references:
+    - https://www.exploit-db.com/ghdb/7014 
 
 api_selection_filters:
   response_code:
