--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/EsmtprcConfig.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/EsmtprcConfig.yaml
@@ -1,15 +1,18 @@
 id: ESMTPRC_CONFIG
 info:
   name: eSMTP - Config Discovery
-  description: eSMTP configuration was discovered.
-  details: ydt
-  impact: tyjdf
+  description: "eSMTP configuration was discovered."
+  details: >
+              "eSMTP - Config Discovery refers to the vulnerability where the eSMTP configuration file, .esmtprc, is discovered due to misconfiguration. This file contains sensitive information like the hostname, username, and password, which can be exploited by attackers for unauthorized access, email impersonation, and spam/phishing campaigns. Promptly addressing this vulnerability is critical to protect the integrity and confidentiality of email communications."
+  impact: "Discovering the eSMTP configuration file exposes sensitive information, allowing attackers to impersonate users, send spam/phishing emails, and gain unauthorized access to email accounts."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: ESMTPRC_CONFIG
   severity: HIGH
+  references:
+    - https://linux.die.net/man/5/esmtprc
 
 api_selection_filters:
   response_code:
