--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/FirebaseConfigExposure.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/FirebaseConfigExposure.yaml
@@ -1,15 +1,18 @@
 id: FIREBASE_CONFIG_EXPOSURE
 info:
   name: Firebase Config Exposure
-  description: UIDGUI GUIHDUG DHIVUD 
-  details: ydt
-  impact: tyjdf
+  description: "Attacker can get unauthorized access of Firebase configuration details." 
+  details: >
+              "Firebase Config Exposure refers to the vulnerability where Firebase configuration details, such as API key, authentication domain, database URL, and storage bucket, are exposed due to misconfiguration. Unauthorized access to these details can lead to misuse of the API key, unauthorized access to Firebase services, and potential manipulation of associated data. Addressing this vulnerability promptly is crucial to prevent unauthorized access and protect the security and integrity of Firebase services and associated resources."
+  impact: "Exposing Firebase configuration details enables attackers to potentially misuse the API key, gain unauthorized access to Firebase services, and manipulate associated data."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: FIREBASE_CONFIG_EXPOSURE
   severity: LOW
+  references:
+    - https://github.com/firebase/firebaseui-web/blob/master/demo/public/sample-config.js
 
 api_selection_filters:
   response_code:
