--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/FtpCredentialsExposure.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/FtpCredentialsExposure.yaml
@@ -1,15 +1,18 @@
 id: FTP_CREDENTIALS_EXPOSURE
 info:
   name: FTP credentials exposure
-  description: UIDGUI GUIHDUG DHIVUD 
-  details: ydt
-  impact: tyjdf
+  description: "Attacker can get unauthorized access of FTP credentials."
+  details: >
+              "FTP Credentials Exposure refers to the vulnerability where FTPSync settings, containing sensitive information such as FTP credentials, overwrite prevention settings, and default folder permissions, are exposed due to misconfiguration. Unauthorized access to these credentials can result in unauthorized manipulation or theft of sensitive data, leading to data breaches and potential unauthorized access to other connected systems. Promptly addressing this vulnerability is critical to prevent unauthorized access, protect data integrity, and ensure the security of the FTP infrastructure."
+  impact: "Exposing FTP credentials enables attackers to gain unauthorized access to FTP servers, leading to potential data breaches, unauthorized modifications, and risks to connected systems."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: FTP_CREDENTIALS_EXPOSURE
   severity: MEDIUM
+  references:
+    - https://www.acunetix.com/vulnerabilities/web/sftp-ftp-credentials-exposure/
 
 api_selection_filters:
   response_code:
