--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GitConfigNginxoffbyslash.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GitConfigNginxoffbyslash.yaml
@@ -1,15 +1,20 @@
 id: GIT_CONFIG_NGINXOFFBYSLASH
 info:
   name: Nginx - Git Configuration Exposure
-  description: Nginx is vulnerable to git configuration exposure.
-  details: ydt
-  impact: tyjdf
+  description: "Nginx is vulnerable to git configuration exposure."
+  details: >
+              "Nginx - Git Configuration Exposure refers to the vulnerability where Nginx servers are susceptible to git configuration exposure due to an off-by-slash misconfiguration. By appending "../" in the URL path, unauthorized access to Git configuration files, such as /.git/config, is possible. Promptly addressing this vulnerability is essential to prevent unauthorized access, protect the confidentiality of repository data, and maintain the security of Nginx servers."
+  impact: "Exploiting the off-by-slash misconfiguration in Nginx exposes Git configuration files, revealing sensitive information such as repository configurations, URLs, and credentials. This enables attackers to gain unauthorized access, manipulate code, and launch further attacks."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: GIT_CONFIG_NGINXOFFBYSLASH
   severity: MEDIUM
+  references:
+    - https://beaglesecurity.com/blog/vulnerability/nginx-off-by-slash-exposes-git-config.html
+    - https://twitter.com/Random_Robbie/status/1262676628167110656
+    - https://github.com/PortSwigger/nginx-alias-traversal/blob/master/off-by-slash.py
 
 api_selection_filters:
   response_code:
