--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/KubernetesKustomizationDisclosure.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/KubernetesKustomizationDisclosure.yaml
@@ -1,15 +1,18 @@
 id: KUBERNETES_KUSTOMIZATION_DISCLOSURE
 info:
   name: Kubernetes Kustomization Disclosure
-  description: VYEVDCVJVD
-  details: ydt
-  impact: tyjdf
+  description: "Search for the presence of Kubernetes Kustomization files (kustomization.yml) on the provided URLs."
+  details: >
+            "Kubernetes Kustomization Disclosure involves searching for the presence of Kubernetes Kustomization files (kustomization.yml) on the provided URLs. These files define customizations for Kubernetes deployments and may contain sensitive configuration information such as API versions, resource definitions, namespaces, and labels. Identifying and addressing this vulnerability is critical to prevent unauthorized access, protect sensitive data, and maintain the integrity of Kubernetes deployments."
+  impact: "Exposing Kubernetes Kustomization files reveals sensitive configuration details, enabling attackers to gain insights into the deployment structure and potentially launch unauthorized access, data leaks, or further attacks."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: KUBERNETES_KUSTOMIZATION_DISCLOSURE
   severity: MEDIUM
+  references:
+    - https://github.com/detectify/ugly-duckling/blob/master/modules/crowdsourced/kubernetes-kustomization-disclosure.json
 
 api_selection_filters:
   response_code:
