--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/LaravelEnv.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/LaravelEnv.yaml
@@ -1,15 +1,19 @@
 id: LARAVEL_ENV
 info:
   name: Laravel - Sensitive Information Disclosure
-  description: A Laravel .env file was discovered, which stores sensitive information like database credentials and tokens. It should not be publicly accessible.
-  details: ydt
-  impact: tyjdf
+  description: "A Laravel .env file was discovered, which stores sensitive information like database credentials and tokens. It should not be publicly accessible."
+  details: >
+              "The Laravel - Sensitive Information Disclosure vulnerability identifies the presence of a Laravel .env file, which stores sensitive data such as database credentials, API keys, and configuration settings. If publicly accessible, this file exposes critical information and can lead to unauthorized access, data breaches, and compromise of the application's security. It is essential to secure the .env file to protect sensitive information and maintain the integrity of the Laravel application."
+  impact: "Publicly exposing the Laravel .env file exposes sensitive information like database credentials and API keys, leading to potential unauthorized access, data breaches, and compromise of the application's security."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: LARAVEL_ENV
   severity: HIGH
+  references:
+    - https://laravel.com/docs/master/configuration#environment-configuration
+    - https://stackoverflow.com/questions/38331397/how-to-protect-env-file-in-laravel
 
 api_selection_filters:
   response_code:
