--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/OracleEbsCredentials.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/OracleEbsCredentials.yaml
@@ -1,15 +1,20 @@
 id: ORACLE_EBS_CREDENTIALS
 info:
   name: Oracle EBS Credentials Disclosure
-  description: hhkij
-  details: jhfj
-  impact: fjhfy
+  description: "Oracle EBS credentials may be exposed through the jtfwrepo.xml file."
+  details: >
+              "The jtfwrepo.xml file in Oracle EBS may contain sensitive information such as passwords and user lists, making it a potential security risk if accessed by unauthorized individuals."
+  impact: "Exposing Oracle EBS credentials can lead to unauthorized access and compromise of sensitive data stored in the system."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: ORACLE_EBS_CREDENTIALS
   severity: MEDIUM
+  references:
+    - https://www.blackhat.com/docs/us-16/materials/us-16-Litchfield-Hackproofing-Oracle-eBusiness-Suite-wp-4.pdf
+    - https://www.blackhat.com/docs/us-16/materials/us-16-Litchfield-Hackproofing-Oracle-eBusiness-Suite.pdf
+    - http://www.davidlitchfield.com/AssessingOraclee-BusinessSuite11i.pdf
 
 api_selection_filters:
   response_code:
