--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ParametersConfig.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ParametersConfig.yaml
@@ -1,15 +1,18 @@
 id: PARAMETERS_CONFIG
 info:
   name: Parameters.yml - File Discovery
-  description: Parameters.yml was discovered.
-  details: ydt
-  impact: tyjdf
+  description: "Parameters.yml was discovered."
+  details: >
+              "The parameters.yml file is a configuration file used in Symfony-based applications to store sensitive information like database credentials, API keys, and encryption settings. Its exposure can lead to unauthorized access, data leaks, and potential security vulnerabilities if not properly protected or restricted.The parameters.yml file often contains critical information required for the functioning of the application, making it a prime target for attackers seeking to exploit misconfigurations or gain unauthorized access to sensitive resources."
+  impact: "Exposing parameters.yml can result in the compromise of sensitive information, including database credentials, jeopardizing the security and integrity of the application or system."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: PARAMETERS_CONFIG
   severity: HIGH
+  references:
+    - https://www.exploit-db.com/ghdb/5986
 
 api_selection_filters:
   response_code:
