--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/RobomongoCredential.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/RobomongoCredential.yaml
@@ -1,15 +1,18 @@
 id: ROBOMONGO_CREDENTIAL
 info:
   name: MongoDB credential disclosure
-  description: MongoDB credentials file used by RoboMongo
-  details: jhfj
-  impact: fjhfy
+  description: "MongoDB credentials file used by RoboMongo"
+  details: >
+              "The template searches for the presence of MongoDB credentials file (robomongo.json) at the specified URLs. This file contains sensitive information such as the database name, username, password, and server host."
+  impact: "The exposure of MongoDB credentials can lead to unauthorized access and manipulation of the database, compromising the confidentiality and integrity of the data stored within."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: ROBOMONGO_CREDENTIAL
   severity: HIGH
+  references:
+    - https://web.cystack.net/vulnerability/cystack.remote.robomongo_cred_disclosure
 
 api_selection_filters:
   response_code:
