--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ServerPrivateKeys.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ServerPrivateKeys.yaml
@@ -1,15 +1,19 @@
 id: SERVER_PRIVATE_KEYS
 info:
   name: Detect Private SSH, TLS, and JWT Keys
-  description: YGUSDCJDSY SVJVVSJ 
-  details: jhfj
-  impact: fjhfy
+  description: "Detects the presence of private SSH, TLS, and JWT keys on the server."
+  details: >
+              "Scans the specified URLs for files containing private keys commonly used for SSH, TLS, and JWT authentication. The presence of these keys could indicate a misconfiguration or insecure handling of sensitive cryptographic material."
+  impact: "Exposing private keys can lead to unauthorized access and compromise the security and integrity of the server and associated services."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: SERVER_PRIVATE_KEYS
   severity: HIGH
+  references:
+    - https://www.acunetix.com/blog/articles/tls-vulnerabilities-attacks-final-part/
+    - https://venafi.com/blog/most-common-ssh-vulnerabilities-how-to-avoid-them/
 
 api_selection_filters:
   response_code:
