--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SshKnownHosts.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SshKnownHosts.yaml
@@ -1,15 +1,18 @@
 id: SSH_KNOWN_HOSTS
 info:
   name: SSH Known Hosts
-  description: hhkij
-  details: jhfj
-  impact: fjhfy
+  description: "Exposed SSH Known Hosts"
+  details: >
+              "Identifies publicly accessible SSH known_hosts files, which store fingerprints of SSH servers. Unintentionally exposing these files can disclose information about previously accessed SSH servers."
+  impact: "Exposing SSH known_hosts files enables attackers to gather information about previously accessed SSH servers, increasing the risk of unauthorized access and potential compromise."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: SSH_KNOWN_HOSTS
   severity: LOW
+  references:
+    - https://datacadamia.com/ssh/known_hosts
 
 api_selection_filters:
   response_code:
