Initial commit for Auth0 integration

--- a/apps/dashboard/pom.xml
+++ b/apps/dashboard/pom.xml
@@ -210,6 +210,11 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>mvc-auth-commons</artifactId>
+            <version>1.9.5</version>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
